--- a/tests/e2e-targetallocator/targetallocator-prometheuscr/02-install.yaml
+++ b/tests/e2e-targetallocator/targetallocator-prometheuscr/02-install.yaml
@@ -81,6 +81,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: check-ta-scrape-config-v1beta1
+  labels:
+    checker: true
 spec:
   template:
     spec:
@@ -97,6 +99,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: check-ta-jobs-scrape-configs-v1beta1
+  labels:
+    checker: true
 spec:
   template:
     spec:
@@ -113,6 +117,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: check-ta-probe-config-v1beta1
+  labels:
+    checker: true
 spec:
   template:
     spec:
@@ -129,6 +135,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: check-ta-jobs-probes-v1beta1
+  labels:
+    checker: true
 spec:
   template:
     spec:
