--- a/tests/e2e-targetallocator/targetallocator-prometheuscr/chainsaw-test.yaml
+++ b/tests/e2e-targetallocator/targetallocator-prometheuscr/chainsaw-test.yaml
@@ -30,4 +30,4 @@ spec:
           file: 02-assert.yaml
     catch:
       - podLogs:
-          selector: app.kubernetes.io/managed-by=opentelemetry-operator
+          selector: checker=true
