--- a/tests/e2e-targetallocator/targetallocator-prometheuscr/02-install.yaml
+++ b/tests/e2e-targetallocator/targetallocator-prometheuscr/02-install.yaml
@@ -81,10 +81,11 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: check-ta-scrape-config-v1beta1
-  labels:
-    checker: true
 spec:
   template:
+    metadata:
+      labels:
+        checker: "true"
     spec:
       restartPolicy: OnFailure
       containers:
@@ -99,10 +100,11 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: check-ta-jobs-scrape-configs-v1beta1
-  labels:
-    checker: true
 spec:
   template:
+    metadata:
+      labels:
+        checker: "true"
     spec:
       restartPolicy: OnFailure
       containers:
@@ -117,10 +119,11 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: check-ta-probe-config-v1beta1
-  labels:
-    checker: true
 spec:
   template:
+    metadata:
+      labels:
+        checker: "true"
     spec:
       restartPolicy: OnFailure
       containers:
@@ -135,10 +138,11 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: check-ta-jobs-probes-v1beta1
-  labels:
-    checker: true
 spec:
   template:
+    metadata:
+      labels:
+        checker: "true"
     spec:
       restartPolicy: OnFailure
       containers:
