--- a/.chloggen/service-instanc-id-mapping.yaml
+++ b/.chloggen/service-instanc-id-mapping.yaml
@@ -5,8 +5,7 @@ change_type: bug_fix
 component: auto-instrumentation
 
 # A brief description of the change. Surround your text with quotes ("") if it needs to start with a backtick (`).
-note: Remove the mapping of `app.kubernetes.io/instance` to `service.instance.id`, because multiple containers 
-  should never share the same `service.instance.id`
+note: Remove the mapping of `app.kubernetes.io/instance` to `service.instance.id`
 
 # One or more tracking issues related to the change
 issues: [3495]
@@ -14,4 +13,15 @@ issues: [3495]
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
 # Use pipe (|) for multiline entries.
-subtext:
+subtext: |
+  Technically, this is a breaking change, but we regard it as a bug fix because the previous behavior was incorrect.
+  
+  In you did have multiple containers and use `app.kubernetes.io/instance` to set the `service.instance.id`, 
+  you will now see multiple instances in the UI - which is the correct behavior.
+  
+  You can still use the attribute `resource.opentelemetry.io/service.instance.id` to set the `service.instance.id`,
+  which will be shared across all containers in the pod - but this is not recommended.
+  
+  Refer to the [semantic conventions](https://opentelemetry.io/docs/specs/semconv/resource/#service-experimental) 
+  for more information.
+
