--- a/tests/e2e-targetallocator-cr/01-assert.yaml
+++ b/tests/e2e-targetallocator-cr/01-assert.yaml
@@ -83,6 +83,8 @@ data:
     prometheus_cr:
       enabled: true
       pod_monitor_selector: null
+      probe_selector: null
+      scrape_config_selector: null
       scrape_interval: 30s
       service_monitor_selector: null
 kind: ConfigMap
