--- a/tests/e2e-ta-collector-mtls/ta-disabled/00-assert.yaml
+++ b/tests/e2e-ta-collector-mtls/ta-disabled/00-assert.yaml
@@ -10,12 +10,25 @@ apiVersion: v1
 data:
   collector.yaml: |
     receivers:
-      otlp:
+      jaeger:
         protocols:
           grpc:
-            endpoint: 0.0.0.0:4317
-          http:
-            endpoint: 0.0.0.0:4318
+            endpoint: 0.0.0.0:14250
+      prometheus:
+        config:
+          global:
+            scrape_interval: 30s
+            scrape_protocols:
+              - PrometheusProto
+              - OpenMetricsText1.0.0
+              - OpenMetricsText0.0.1
+              - PrometheusText0.0.4
+          scrape_configs:
+            - job_name: otel-collector
+              scrape_interval: 10s
+              static_configs:
+                - targets:
+                    - 0.0.0.0:8888
     exporters:
       debug: null
     service:
@@ -27,7 +40,7 @@ data:
           exporters:
             - debug
           receivers:
-            - otlp
+            - jaeger
 kind: ConfigMap
 metadata:
-  name: prometheus-cr-collector-aec5aa11
+  name: prometheus-cr-collector-7a42612e
