--- a/tests/e2e-ta-collector-mtls/ta-disabled/00-install.yaml
+++ b/tests/e2e-ta-collector-mtls/ta-disabled/00-install.yaml
@@ -1,54 +1,3 @@
-apiVersion: v1
-automountServiceAccountToken: true
-kind: ServiceAccount
-metadata:
-  name: collector
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: (join('-', ['collector', $namespace]))
-rules:
-  - apiGroups:
-      - ""
-    resources:
-      - pods
-      - nodes
-      - nodes/metrics
-      - services
-      - endpoints
-      - namespaces
-    verbs:
-      - get
-      - watch
-      - list
-  - apiGroups:
-      - networking.k8s.io
-    resources:
-      - ingresses
-    verbs:
-      - get
-      - watch
-      - list
-  - nonResourceURLs:
-      - /metrics
-      - /metrics/cadvisor
-    verbs:
-      - get
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: (join('-', ['collector', $namespace]))
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: (join('-', ['collector', $namespace]))
-subjects:
-  - kind: ServiceAccount
-    name: collector
-    namespace: ($namespace)
----
 apiVersion: opentelemetry.io/v1alpha1
 kind: OpenTelemetryCollector
 metadata:
@@ -56,21 +5,31 @@ metadata:
 spec:
   config: |
     receivers:
-      otlp:
-        protocols:
-          grpc:
-          http:
+      jaeger:
+          protocols:
+            grpc:
+
+      # Collect own metrics
+      prometheus:
+        config:
+          global:
+            scrape_interval: 30s
+            scrape_protocols: ['PrometheusProto','OpenMetricsText1.0.0','OpenMetricsText0.0.1','PrometheusText0.0.4']
+          scrape_configs:
+            - job_name: 'otel-collector'
+              scrape_interval: 10s
+              static_configs:
+                - targets: [ '0.0.0.0:8888' ]
+
     processors:
 
     exporters:
       debug:
-
     service:
       pipelines:
         traces:
-          receivers: [otlp]
+          receivers: [jaeger]
           exporters: [debug]
   mode: statefulset
-  serviceAccount: collector
   targetAllocator:
     enabled: false
