--- a/autoinstrumentation/nodejs/package.json
+++ b/autoinstrumentation/nodejs/package.json
@@ -4,8 +4,6 @@
     "private": true,
     "scripts": {
         "clean": "rimraf build/*",
-        "prepare": "npm run compile",
-        "compile": "tsc -p .",
         "postcompile": "copyfiles -f 'build/src/**' build/workspace/ && copyfiles 'node_modules/**' package.json build/workspace/ && npm -C build/workspace prune --omit=dev --no-package-lock"
     },
     "devDependencies": {
@@ -14,8 +12,7 @@
         "typescript": "^5.6.3"
     },
     "dependencies": {
-        "@opentelemetry/exporter-metrics-otlp-grpc": "0.57.0",
-        "@opentelemetry/auto-instrumentations-node": "0.55.0",
-        "@opentelemetry/exporter-prometheus": "0.57.0"
+        "@opentelemetry/api": "1.9.0",
+        "@opentelemetry/auto-instrumentations-node": "0.55.2"
     }
 }
