--- a/.github/workflows/auto-update-agent.yaml
+++ b/.github/workflows/auto-update-agent.yaml
@@ -70,6 +70,26 @@ jobs:
           echo "latest-version=${latest_version}" >> $GITHUB_OUTPUT
           echo "already-opened=${already_opened}" >> $GITHUB_OUTPUT
 
+          # Debug information
+          echo "Debug information for ${{ matrix.agent }} agent:"
+          echo "Current version detected: ${current_version}"
+          echo "Latest version detected: ${latest_version}"
+          echo "PR already opened for this version: ${already_opened:-false}"
+          echo "Version comparison: Current ${current_version} vs Latest ${latest_version}"
+
+          # Additional validation
+          if [[ -z "$current_version" ]]; then
+            echo "WARNING: Failed to detect current version"
+          fi
+
+          if [[ -z "$latest_version" ]]; then
+            echo "WARNING: Failed to detect latest version"
+          fi
+
+          # Print PR search query details
+          echo "PR search query: \"Update the OpenTelemetry ${{ matrix.agent }} agent version to $latest_version\""
+          echo "PR search results: ${matches:-none}"
+
       - name: Update version
         if: |
           steps.check-versions.outputs.current-version != steps.check-versions.outputs.latest-version &&
