--- a/.github/workflows/auto-update-agent.yaml
+++ b/.github/workflows/auto-update-agent.yaml
@@ -45,7 +45,7 @@ jobs:
                                   --json tagName \
                                   --jq '.[] | select(.tagName | startswith("auto-instrumentations-node-v")) | .tagName' \
                                   | head -1 \
-                                  | sed 's/auto-instrumentations-node-v//'
+                                  | sed 's/auto-instrumentations-node-v//')
               ;;
             python)
               current_version=$(grep -Po "^opentelemetry-distro==\K[0-9]+\.[0-9]+(b[0-9]+)?" autoinstrumentation/python/requirements.txt)
