--- a/.chloggen/network-policy-ta.yaml
+++ b/.chloggen/network-policy-ta.yaml
@@ -2,10 +2,10 @@
 change_type: enhancement
 
 # The name of the component, or a single word describing the area of concern, (e.g. collector, target allocator, auto-instrumentation, opamp, github action)
-component: collector
+component: target allocator
 
 # A brief description of the change. Surround your text with quotes ("") if it needs to start with a backtick (`).
-note: Add network policy for the collector.
+note:  Add network policy for the target allocator.
 
 # One or more tracking issues related to the change
 issues: [4231]
@@ -14,8 +14,8 @@ issues: [4231]
 # These lines will be padded with 2 spaces and then inserted directly into the document.
 # Use pipe (|) for multiline entries.
 subtext: |
-  This change adds a network policy to the collector to allow traffic to all collector receivers and egress traffic from the collector pod.
-  The collector network policy can be enabled in the collector CR.
+  This change adds a network policy to the target allocator which allows traffic to the port `8080` and outgoing traffic to the API server.
+  The target allocator network policy can be enabled in the target allocator CR.
   ```yaml
   spec:
     networkPolicy:
