--- a/tests/e2e-instrumentation/instrumentation-dotnet-musl/01-assert.yaml
+++ b/tests/e2e-instrumentation/instrumentation-dotnet-musl/01-assert.yaml
@@ -86,6 +86,10 @@ metadata:
     app.kubernetes.io/name: deployment-collector
     app.kubernetes.io/part-of: opentelemetry
   name: deployment-collector
+status:
+  availableReplicas: 1
+  readyReplicas: 1
+  replicas: 1
 ---
 apiVersion: v1
 kind: Service
@@ -96,3 +100,15 @@ metadata:
     app.kubernetes.io/name: deployment-collector
     app.kubernetes.io/part-of: opentelemetry
   name: deployment-collector
+spec:
+  ports:
+  - appProtocol: grpc
+    name: otlp-grpc
+    port: 4317
+    protocol: TCP
+    targetPort: 4317
+  - appProtocol: http
+    name: otlp-http
+    port: 4318
+    protocol: TCP
+    targetPort: 4318
