--- a/.chloggen/rm_opencensus_receiver_parsing.yaml
+++ b/.chloggen/rm_opencensus_receiver_parsing.yaml
@@ -2,7 +2,7 @@
 change_type: deprecation
 
 # The name of the component, or a single word describing the area of concern, (e.g. collector, target allocator, auto-instrumentation, opamp, github action)
-component: operator
+component: collector
 
 # A brief description of the change. Surround your text with quotes ("") if it needs to start with a backtick (`).
 note: Remove opencensus receiver from parsing logic as it is no longer supported in OpenTelemetry Collector
