--- a/.chloggen/startup-probe.yaml
+++ b/.chloggen/startup-probe.yaml
@@ -8,7 +8,7 @@ component: collector
 note: add startup probe to the collector CRD
 
 # One or more tracking issues related to the change
-issues: [https://github.com/open-telemetry/opentelemetry-operator/issues/4347]
+issues: [4347]
 
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
