--- a/tests/e2e-targetallocator/targetallocator-features/02-assert.yaml
+++ b/tests/e2e-targetallocator/targetallocator-features/02-assert.yaml
@@ -4,6 +4,8 @@ metadata:
   name: stateful-targetallocator
   labels:
     app.kubernetes.io/name: test
+  annotations:
+    e2e-test-annotation: "true"
 spec:
   selector:
     matchLabels:
