--- a/tests/e2e-targetallocator-cr/targetallocator-label/00-install.yaml
+++ b/tests/e2e-targetallocator-cr/targetallocator-label/00-install.yaml
@@ -3,6 +3,8 @@ apiVersion: opentelemetry.io/v1alpha1
 kind: TargetAllocator
 metadata:
   name: ta
+  annotations:
+    e2e-test-annotation: "true"
 spec:
 ---
 apiVersion: opentelemetry.io/v1beta1
