--- a/.chloggen/fix_link-checking.yaml
+++ b/.chloggen/fix_link-checking.yaml
@@ -1,8 +1,7 @@
 change_type: enhancement
 component: github action
-note: Add link checking and markdown linting workflows to validate documentation
+note: Add link checking workflow to validate documentation
 issues: [3425]
 subtext: |
   - Added ci-markdown-link.yml workflow using linkspector to check for broken links in markdown files
-  - Added ci-markdownlint.yml workflow to enforce markdown standards
-  - Added .linkspector.yml and .markdownlint.json configuration files
+  - Added .linkspector.yml configuration file
